--- a/style.css
+++ b/style.css
@@ -29,16 +29,15 @@ button{ border: none; margin: 0; padding: 10px 25px 10px 25px; width: auto; over
 @media (min-width:768px) { .responsive-two-column-grid { display: grid; grid-template-columns: 1fr 1fr; } }
 
 
-#myVideo {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-}
+
 
 /* -----------------------------HERO---------------------------------- */
-.hero{background: url('https://www2.deloitte.com/content/dam/html/il/2023/tax-landing-page/pov%20cover.mp4') center center/cover no-repeat; position: relative;}
+#myVideo { position: absolute; right: 0; bottom: 0; min-width: 100%; min-height: 100%; object-fit: cover; }
+@media screen and (max-width: 768px) { #myVideo { position: absolute; right: 0; bottom: 0; max-width: 100%; max-height: 100%; object-fit: cover; } } 
+/* .hero{background: url('https://www2.deloitte.com/content/dam/html/il/2023/tax-landing-page/pov%20cover.mp4') center center/cover no-repeat; position: relative;} */
+.hero{ position: relative; overflow: hidden;}
+
+
 
 @keyframes fade-in-forward { 0% { opacity: 0; transform: scale(0.6); } 100% { opacity: 1; transform: scale(1); } }
 @keyframes fade-in-bottom { 0% { opacity: 0; transform: translateY(50px); } 100% { opacity: 1; transform: translateY(0); } }
